# crossed-hs

./: .gitignore  CHANGELOG.md  Main.hs  README.md  crossed.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Crossed.hs
