cabal-version:       >=1.10
name:                crossed
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Josh Miller
maintainer:          notjoshmiller@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable crossed
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  --   OverloadedStrings
  build-depends:       
      base >=4.12 && <4.13
    , bytestring
    , containers
    , MonadRandom
    , random
    , random-shuffle
    , vector
  -- hs-source-dirs:
  default-language:    Haskell2010
