cabal-version:       >=1.10
name:                crossed
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              Josh Miller
maintainer:          notjoshmiller@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library 
  ghc-options: -Wall -Wcompat -O2 -Wno-name-shadowing
  exposed-modules: Crossed
  build-depends:       
      base 
    , bytestring
    , containers
    , MonadRandom
    , logict
    , mtl
    , random-shuffle
  hs-source-dirs: src
  default-language: Haskell2010

executable crossed-exe
  main-is: Main.hs
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
      async
    , base 
    , bytestring
    , crossed
  default-language: Haskell2010
